# bulbatech-citymap

./: README.md  pyproject.toml
citymap_client/: .COOKIE_SECRET  .OFFICIAL_TOKEN  .flutter-plugins-dependencies  README.md  config.json  pubspec.yaml
citymap_client/.dart_tool/: package_config.json  package_graph.json
citymap_client/.dart_tool/dartpad/: web_plugin_registrant.dart
citymap_client/.dart_tool/flutter_build/: dart_plugin_registrant.dart
citymap_client/.dart_tool/flutter_build/95f9a929698cbbd8f9159e8ef4e6824c/: .filecache  android_aot_bundle_release_android-arm.stamp  android_aot_bundle_release_android-arm64.stamp  (+14 more)
citymap_client/android/: local.properties  pubspec.yaml
citymap_client/data/: stats.db  tickets.db  users.db
citymap_client/lib/: main.dart
citymap_client/lib/utils/: client_controller.dart  file_picker_manager.dart  image_picker_manager.dart  osm_place.dart  regex_validator.dart  request_schemes.dart  routing_controller.dart  screen_info.dart  server.dart  theme_colors.dart  theme_manager.dart
citymap_client/lib/widgets/: birthday_picker.dart  password_picker.dart  snils_picker.dart
citymap_client/logs/: 1769538972.870447.txt  1769539128.8715599.txt
citymap_server/: bulbatech-citymap.service  config.py  database.py  handlers.py  hasher.py  logger.py  main.py
citymap_server/static/: home.css  min.css  official.css  official.js  ticket.html
citymap_server/templates/: home.html  legal.html
citymap_server/templates/official/: login.html  panel.html
citymap_server/tests/: db_tests.py
docs/: protocol.md
utils/: database.py
(+49 files in other folders)
