[project]
name = "bulbatech-citymap"
version = "26011"
description = "BulbaTech-citymap is digital city map with suggestions from citizens"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["tornado"]

[project.urls]
Repository = "https://github.com/lb357/bulbatech-citymap"